[package]
name = "dmz_locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }

toml = "0.7.2"
env_logger = "0.10.0"
log = "0.4.0"
moka = "0.10.0"
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
